<resources>
    <string name="app_name">MusicApp</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_ok">Ok</string>

    <string name="twitter_consumer_key">1xFwJ1kmtvkRElNSToBaLTdWo</string>
    <string name="twitter_consumer_secret"> khFiQVbHugffVDvkP4yQ2P74K32cSx5yYFSW59nwzp7SyfQ3Fb</string>

    <!--error message-->
    <string name="error_input_invalid">Please enter a valid email id</string>
    <string name="error_input_glob">Please fill all mendatory fields</string>
    <string name="error_no_internet">No internet connection</string>
    <string name="error_search_input">Invalid search</string>
    <string name="error_pwd_match">Password and confirm password does not match</string>


    <!-- Gender -->
    <string-array name="str_array_gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>


    <!--facebook appid-->
    <string name="facebook_app_id">347960772244019</string>

    <!--Signup screen-->
    <string name="txt_signup">Sign Up</string>
    <string name="txt_fb">Sign in with Facebook</string>
    <string name="txt_twit">Sign in with Twitter</string>
    <string name="txt_with_mail">or with Email</string>
    <string name="txt_email">Enter Email ID</string>
    <string name="txt_password">Enter Password</string>
    <string name="txt_user_name">Enter Username</string>
    <string name="txt_dob">Date Of Birth</string>
    <string name="txt_gender">Gender</string>
    <string name="txt_by_signup">By signing up you accept the </string>
    <string name="txt_term_condition">*Terms &amp; Conditions</string>

    <!--Login screen-->
    <string name="txt_login">Log In</string>
    <string name="txt_login_fb">Log in with Facebook</string>
    <string name="txt_login_twit">Log in with Twitter</string>
    <string name="txt_login_or_mail">or</string>
    <string name="txt_login_user_name">Username</string>
    <string name="txt_login_password">Password</string>
    <string name="txt_forgot_pwd"><u>Forgot Your Password?</u></string>

    <!--  Home screen header-->
    <string name="home">Home</string>
    <string name="browse">Browse</string>
    <string name="library">Library</string>
    <string name="settings">Settings</string>
    <string name="live_stream">Live Stream</string>
    <!--  App Intro screens -->
    <string name="login">Log In</string>
    <string name="signUp">Sign Up</string>

    <string name="or">or</string>

    <!--  Browse screens -->
    <string name="txt_search">Search</string>
    <string name="txt_search_music">Search Music App</string>
    <string name="txt_find">Find your favorite songs, artists,\n albums, videos,playlists</string>

    <!--  Reset password -->
    <string name="txt_enter_email">Enter your Email Id</string>
    <string name="txt_hint_enter_email">Enter Email Id</string>
    <string name="txt_resend">Resend Code</string>
    <string name="txt_reset_pwd">Reset Password</string>
    <string name="txt_reset">Reset</string>
    <string name="txt_reset_warning">An email containing the verification code \n to reset the password \n has been sent to your email id.</string>
    <string name="txt_new_pwd">New Password</string>
    <string name="txt_confirm_new_pwd">Confirm New Password</string>


    <!--twitter and facebbok-->
    <!--  <string name="twitter_consumer_key">TvmqChGVFraY2NySfw9dURdYV</string>
      <string name="twitter_consumer_secret"> OJclJU9GthnDJtJcznVIe4OkrlEXPc5OLyrTelHGIoO3LtnoaP</string>-->


    <!--  About Screen -->
    <string name="txt_version">Version</string>
    <string name="txt_terms">Terms &amp; Conditions</string>
    <string name="txt_privacy">Privacy Policy</string>

    <!--  Change password Screen -->
    <string name="txt_change_cur_pwd">Enter Current Password</string>
    <string name="txt_change_new_pwd">Enter New Password</string>
    <string name="txt_change_confirm_pwd">Confirm New Password</string>
    <string name="txt_change_password">Change Password</string>

    <!--  Playlist Screen -->
    <string name="txt_make_list">Make your first \nplaylist</string>
    <string name="txt_create_list">Create Playlist</string>
    <string name="popup_create">Create</string>
    <string name="popup_create_title">Create New Playlist</string>
    <string name="popup_create_playlist_name">Enter Name</string>

    <!--  Playlist songs list -->
    <string name="txt_add_song">Want to add songs \nto this playlist?</string>
    <string name="txt_tap_song">Tap the button next to the song \nyou like and select "add to playlist"</string>
    <string name="txt_songs_find">Find Songs</string>


    <!--Error message-->
    <string name="error_msg">Something went wrong! Please try again later.</string>

</resources>
