<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.musicapp.custom.AutoScrollViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="60dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/music"/>


        <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textAllCaps="true"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">


        <TextView
            android:id="@+id/btn_login"
            android:layout_weight="0.5"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAllCaps="false"
            android:padding="@dimen/dimen_10"
            android:background="@android:color/white"
            android:textSize="@dimen/txt_18"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/tw__medium_gray"/>
        <TextView
            android:id="@+id/btn_signup"
            android:layout_weight="0.5"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:textAllCaps="false"
            android:padding="@dimen/dimen_10"
            android:background="@android:color/white"
            android:textSize="@dimen/txt_18"
            />

    </LinearLayout>


        <com.musicapp.custom.CirclePageIndicator
            android:id="@+id/indicator"
            android:layout_width="wrap_content"
           android:layout_height="60dp"
            android:layout_above="@+id/btn_start"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:gravity="center_horizontal"
            android:padding="15dip"
            app:fillColor="@color/white"
            app:pageColor="@android:color/transparent" />
    </RelativeLayout>
